# solrcloud-s3-backup-xfer

./: README.md  pyproject.toml
src/: backup_copy.py
src/lib/: processor.py  thread_with_result.py
