[tool.poetry]
name = "backup-copy"
version = "0.1.0"
description = ""
authors = ["Bryce Lowe <brycel@zillowgroup.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.22.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
